--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,9 @@ header a {
       padding: 0;
       width: 100%;
     }
+    .text {
+      padding: 0 30px;
+    }
     #heros {
       display: flex;
       justify-content: center;
